@@ -1,4 +1,4 @@
-/*	$NetBSD: util.h,v 1.70 2024/11/02 03:21:42 riastradh Exp $	*/
+/*	$NetBSD: util.h,v 1.71 2025/12/14 16:28:05 kre Exp $	*/
 
 /*-
  * Copyright (c) 1995
@@ -60,6 +60,15 @@ typedef __va_list va_list;
 #define	PW_POLICY_BYSTRING	0
 #define	PW_POLICY_BYPASSWD	1
 #define	PW_POLICY_BYGROUP	2
+
+/* Definitions for the strpct() functions rounding modes */
+#define	STRPCT_RTN		0U	/* Round to nearest */
+#define	STRPCT_RAZ		2U	/* Round away from zero */
+#define	STRPCT_RTZ		3U	/* Round towards zero */
+#define	STRPCT_RTI		6U	/* Round towards +Inf */
+#define	STRPCT_RAI		7U	/* Round away from +Inf (to -Inf) */
+/* Do not alter those 5 values, the implementation depends upon them */
+#define	STRPCT_RQRY		8U	/* Any value not one of the above */
 
 __BEGIN_DECLS
 struct disklabel;
@@ -136,6 +145,10 @@ int		sockaddr_snprintf(char *, size_t, const char *,
     const struct sockaddr *);
 char 	       *strpct(char *, size_t, uintmax_t, uintmax_t, size_t);
 char 	       *strspct(char *, size_t, intmax_t, intmax_t, size_t);
+char 	       *strpct_r(char *, size_t, uintmax_t, uintmax_t, size_t,
+    uint32_t);
+char 	       *strspct_r(char *,size_t, intmax_t, intmax_t, size_t, uint32_t);
+uint32_t	strpct_round(uint32_t);
 int		string_to_flags(char **, unsigned long *, unsigned long *);
 int		ttyaction(const char *, const char *, const char *);
 int		ttylock(const char *, int, pid_t *);
