@@ -105,7 +105,10 @@ snprintb_m
 sockaddr_snprintf
 string_to_flags
 strpct
+strpct_r
+strpct_round
 strspct
+strspct_r
 ttyaction
 ttylock
 ttymsg
